# Mini-DNS-Server

./: CMakeLists.txt  Makefile  README.md  dns_client.c  dns_client3.c  dns_client_v2.c  dns_packet_parsing.c  dns_server_local_v1.c  dns_server_local_v2.c  dns_server_v0.c  dns_server_v1.c  dns_server_v2.c  test.c  test_script.sh  utils.c  utils.h
RR/: univ-tlse3.fr.conf
